    /var/lib/dpkg/status, but do not have an apt record any more; treat them
    like virtual packages and just issue a warning instead of falling over.
    (LP: #107474)
  * Add doc/data-format.tex: Documentation of the structure, encoding, and
    standard keys of the Apport report file format. [apport-for-upstreams
    blueprint]

 -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 24 May 2007 19:24:27 +0200

apport (0.80) gutsy; urgency=low

  Collect all Launchpad specific bits in a separate class and provide an
  abstract base class. This will greatly help for getting upstream acceptance
  and the possibility of automatically forwarding crashes upstream
  (apport-for-upstreams specification):

  * Add apport/crashdb.py: Abstract crash database interface. This also offers
    a factory function get_crashdb() which reads a configuration file to find
    the default crash database to be used.
  * Add ./crashdb.conf: Crash database configuration file, for Ubuntu on
    Launchpad. Modify setup.py and debian/python-apport.install to ship it in
    python-apport.
  * Add apport/crashdb_impl/memory.py: Simple in-memory implementation of
    crash database interface for testing.
  * Add apport/crashdb_impl/launchpad.py: Launchpad implementation of crash
    database interface.
  * apport/ui.py: Drop LP specific bits and move towards new CrashDatabase
    interface.
  * apport/ui.py, test suite: Do not overwrite file_report() any more, but
    use the memory CrashDatabase. This will test the actual file_report()
    implementation and allows the test suite to check the precise value of
    opened URLs.
  * apport/{report,ui}.py: Move UserInterface.create_crash_bug_title() and its
    test cases to Report.standard_title(). It is much more appropriate there
    and can be used in the retracer as well.
  * bin/apport-retrace: Drop LP specific bits and move to CrashDatabase
    interface. Remove the --remove-tag option, we really should not have it