@@ -24,7 +24,7 @@ setup(name='apport',
       data_files=[('share/apport', ['gtk/apport-gtk.glade'] + glob.glob('qt4/*.ui')),
                   ('share/icons/hicolor/scalable/apps', ['apport/apport.svg']),
                   ('share/apport/testsuite/', ['test-apport', 'test-hooks', 'run-tests']),
-                  ('share/doc/apport/', glob.glob('doc/*')),
+                  ('share/doc/apport/', glob.glob('doc/*.txt') + glob.glob('doc/*.pdf')),
                   ('share/apport/package-hooks/', glob.glob('package-hooks/*')),
                   ('/etc/apport/', ['crashdb.conf'])]+mo_files,
       scripts=['bin/apport', 'bin/apport-checkreports', 'bin/apport-retrace',
