@@ -43,8 +43,11 @@ apport (0.81) gutsy; urgency=low
   * Add doc/data-format.tex: Documentation of the structure, encoding, and
     standard keys of the Apport report file format. [apport-for-upstreams
     blueprint]
+  * Add doc/Makefile: Build and clean rules for generating data-format.pdf.
+  * debian/rules, setup.py: Call doc/Makefile and install the PDF
+    documentation. Add texlive-latex-recommended build dependency for that.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 24 May 2007 19:24:27 +0200
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 24 May 2007 19:39:12 +0200
 
 apport (0.80) gutsy; urgency=low
 
